--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -25,11 +25,12 @@
    "metadata": {},
    "source": [
     "# Data gathering instructions\n",
-    " * Ir ao Dashboard\n",
-    " * Contas à ordem -> Saldos e Movimentos\n",
-    " * Selecionar intervalo de datas desejado para visualizar\n",
-    " * Canto superior direito -> Gravar em XLS\n",
-    " * Colocar o Documento .csv na mesma pasta que o notebook e correr as células\n",
+    " * Go to Dashboard\n",
+    " * \"Contas à ordem\" -> \"Saldos e Movimentos\"\n",
+    " * Select the dates between which you want to export\n",
+    " * Upper right corner -> \"Gravar em XLS\"\n",
+    " * Place the `.csv` document in the same folder as this notebook and run the cells\n",
+    " * The document should be named `conta.csv`\n",
     " * Done"
    ]
   },
